joos1syntax/test/pos/SimpleFor3.java
public class SimpleFor3 {
  public SimpleFor3() {
    for (int x;;);
  }
}
