joos1syntax/test/neg/BadFor2.java
public class BadFor2 {
  public BadFor2() {
    for (;;
  }
}
